[project]
name = "twitter-capture"
version = "1.0.0"
description = "Telegram bot that extracts images, videos, and GIFs from Twitter/X URLs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "harus_claw", email = "harus.claw@proton.me" }
]
keywords = ["twitter", "telegram", "bot", "media-extractor", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
]

[project.scripts]
twitter-capture = "twitter_capture.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twitter_capture"]
